--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 
-
 <body>
 	<div class= topbar>
-		<input name="search" placeholder="search">
-	</div>
+        <input id="search" placeholder="Search Place" type="search" name="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
+    </div>
 
 	<div class="sidebar bar-block bar-item">
- 		<h2 class="bar-item">Places</h2>
+ 		<h3 id="page-title" class="bar-item">Ithaca, NY</h3>
     <input id ="show" type="button" value="Show Marker">
     <input id ="hide" type="button" value="Hide Marker">
- 		<ul class="list-items" data-bind="foreach:locations">
- 			<li data-bind="text:$data.name, css: {selected: $data == $root.selectedId()},
- 			click: $root.displaySelected"> </li>
+ 		<ul id="list" class="list-items" data-bind="foreach:locations">
+ 			<li data-bind="text: $data.name,
+                   css: {selected: $data.id == $root.selectedId()},
+                   click: $root.displaySelected"></li>
  		</ul>
 	</div>
 
 	<div class="map-container">
 		<div id="map"></div>
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5zcCfVaX_6QWbku4YXLaHhCfhMDGNndA&v=3&callback=initMap"></script>
 	<script src="js/knockout-3.4.2.js"> </script>
 	<script src="js/map.js"> </script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5zcCfVaX_6QWbku4YXLaHhCfhMDGNndA&v=3&callback=initMap">
 
-
-	</script>
 
 </body>
 </html>
