--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 			<!--Sidebar-->
 			<div class="col s12 m12 l3 xl3" id="sidebar">
 				<div id="header" class="center-align">
-					<h4 id="page-title" class="valign-wrapper"> <i id="logo" class="material-icons left">map</i> Ithaca, NY</h4> 
-					<p id="intro">Ithaca is Gorges! <br> A personal guide of the best local spots. Built by <a class="footer-link" href="https://summerohoh.github.io/"> Summer J. Oh </a>. View code on <a class="footer-link" href="https://github.com/summerohoh/map-project"> Github </a> </p>
+					<h4 id="page-title" class="valign-wrapper"> <i id="logo" class="material-icons left">map</i> Ithaca, NY</h4>
+					<p id="intro">
+						Ithaca is Gorges! <br>
+						A personal guide for the best local spots.<br>
+						Built by <a class="footer-link" href="https://summerohoh.github.io/"> Summer J. Oh </a>. View code on <a class="footer-link" href="https://github.com/summerohoh/map-project"> Github </a> </p>
 
 					<!-- Search bar -->
 					<div id="serachbar" class="row valign-wrapper">
-					
+
 						<div class="input-field col s10 m8 l12 offset-s1 offset-m2">
 							<input id="search" placeholder="Search Place" type="search" name="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off" >
 							<i id="searchicon" class="material-icons right">search</i>
@@ -34,21 +37,21 @@
 				<ul id="list" class="list-items wave-effect hide-on-med-and-down" data-bind="foreach:filteredLocation">
 					<li class="location" data-bind="text: $data.name,
 					css: {selected: $data.id == $root.selectedId()},
-					click: $root.displaySelected">   	
+					click: $root.displaySelected">
 					</li>
-				</ul>		
+				</ul>
 			</div>
 
 			<ul class="collapsible hide-on-large-only" data-collapsible="accordion">
 				<li>
 					<div class="collapsible-header">
 						<a id="menuicon-wrapper" data-activates="dropdown" class= "collapsible-header valign-wrapper center-align"><i id="menuicon" class="material-icons">menu</i></a>
-					</div>	
+					</div>
 					<div id="mobilediv" class="collapsible-body hide-on-large-only">
 						<ul class="list-items" data-bind="foreach:filteredLocation">
 							<li class="mobile-list-items location" data-bind="text: $data.name,
 								css: {selected: $data.id == $root.selectedId()},
-								click: $root.displaySelected">   	
+								click: $root.displaySelected">
 							</li>
 						</ul>
 					</div>
@@ -60,7 +63,7 @@
 				<div id="map"></div>
 			</div>
 		</div>
-		
+
 		<!--Import Javascript files-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script async async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5zcCfVaX_6QWbku4YXLaHhCfhMDGNndA&v=3&callback=initMap"></script>
@@ -68,6 +71,6 @@
 		<script src="js/app.js"> </script>
 		<script src="js/knockout-3.4.2.js"> </script>
 		<script src="js/map.js"> </script>
-	
+
 	</body>
 </html>
